Move the package.mask rule up

--- a/ros_base/Dockerfile
+++ b/ros_base/Dockerfile
@@ -79,6 +79,13 @@ RUN $PREFIXED emerge net-misc/wget
 RUN $PREFIXED emerge net-misc/curl
 RUN $PREFIXED update-ca-certificates
 
+# Currently there is a bug that wont allow to compile rostime and others:
+# https://github.com/ros/ros-overlay/issues/711
+# Downgrading cmake seems to work it out
+# We do it here as cmake is emerged as a dependency before we actually
+# emerge ros-kinetic/ros_base
+RUN echo ">=dev-util/cmake-3.13.0" >> $EPREFIX/etc/portage/package.mask
+
 # Make sure rosdep emerges OK
 RUN $PREFIXED emerge dev-python/rosdep
 
@@ -107,11 +114,6 @@ RUN echo "# required by dev-python/wxpython-3.0.2.0::gentoo\n\
 # /usr/include/string.h:627:12: fatal error: bits/string.h: No such file or directory
 # #  include <bits/string.h>
 RUN echo ">=dev-python/pillow-5.2.0" >> $EPREFIX/etc/portage/package.mask
-
-# Currently there is a bug that wont allow to compile rostime and others:
-# https://github.com/ros/ros-overlay/issues/711
-# Downgrading cmake seems to work it out
-RUN echo ">=dev-util/cmake-3.13.0" >> $EPREFIX/etc/portage/package.mask
 
 # Setup the basic ROS
 RUN $PREFIXED  emerge ros-kinetic/ros_base
