--- a/ros_base/Dockerfile
+++ b/ros_base/Dockerfile
@@ -122,6 +122,19 @@ RUN echo "# required by dev-python/wxpython-3.0.2.0::gentoo\n\
 # #  include <bits/string.h>
 RUN echo ">=dev-python/pillow-5.2.0" >> $EPREFIX/etc/portage/package.mask
 
+# Only emerge for Python 2.7
+# Because of errors like:
+# Issue
+RUN echo "# From the Docker image of ros-overlay\n\
+# mainly force to build just Python 2.7\n\
+ros-indigo/* PYTHON_TARGETS: -* python2_7\n\
+ros-indigo/* PYTHON_SINGLE_TARGET: -* python2_7\n\
+ros-kinetic/* PYTHON_TARGETS: -* python2_7\n\
+ros-kinetic/* PYTHON_SINGLE_TARGET: -* python2_7\n\
+ros-lunar/* PYTHON_TARGETS: -* python2_7\n\
+ros-lunar/* PYTHON_SINGLE_TARGET: -* python2_7\n\
+" >> $EPREFIX/etc/portage/package.use
+
 # Setup the basic ROS
 RUN $PREFIXED  emerge ros-kinetic/ros_base
 
