--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,7 +125,7 @@ jobs:
       displayName: 'docker login'
     # need to add --security-opt seccomp:unconfined cause of https://bugs.gentoo.org/672602
     # Doesnt work on build... need another workaround?
-    - script: cd ros_base && docker build -f Dockerfile -t $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) .
+    - script: cd desktop && docker build -f Dockerfile -t $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) .
       displayName: 'docker build'
       # This means up to 6h
       timeoutInMinutes: 0
