Build python with all the supports

--- a/ros_base/Dockerfile
+++ b/ros_base/Dockerfile
@@ -49,7 +49,12 @@ RUN bash gentoo/executeonprefix emerge --version
 ENV PREFIXED=/tmp/gentoo/executeonprefix
 ENV EPREFIX=/tmp/gentoo
 
-# By default it's python3 (option 1)
+# Build python with sqlite and bluetooth support
+# I find very surprising sqlite is not mandatory
+RUN echo "dev-lang/python sqlite bluetooth readline"
+RUN $PREFIXED emerge python:2.7[sqlite,bluetooth,readline] python:3.6[sqlite,bluetooth,readline]
+
+# By default it's python3 (option 1) but ROS uses Python 2.7 (as of now)
 # Choosing Python 2.7
 RUN $PREFIXED eselect python set 2
 
