--- a/desktop_full/Dockerfile
+++ b/desktop_full/Dockerfile
@@ -1,4 +1,8 @@
 FROM awesomebytes/roogp_ros_kinetic_desktop_2
 
+# If we can go faster, try
+RUN sed -i -e 's/j1/j'"$((`grep -c \^processor \/proc\/cpuinfo` / 2))"'/g' $EPREFIX/etc/portage/make.conf
+RUN sed -i -e 's/j2/j'"$((`grep -c \^processor \/proc\/cpuinfo` / 2))"'/g' $EPREFIX/etc/portage/make.conf
+
 RUN $PREFIXED emerge ros-kinetic/desktop_full
 
