Divide ros_base in two steps to avoid hitting time limit when machines run slow

--- a/desktop_full/Dockerfile
+++ b/desktop_full/Dockerfile
@@ -87,6 +87,34 @@ RUN echo "# required by sci-electronics/gazebo-7.11.0::ros-overlay\n\
 # required by sci-electronics/gazebo (argument)\n\
 >=media-libs/freeimage-3.15.4-r1 png" >> $EPREFIX/etc/portage/package.use
 
+# Ruby >2.3 is messed up in this installation
+# This trick is a pretty ugly workaround
+# Maybe do a copy instead?
+RUN cd /tmp/gentoo/usr/lib64/ruby/site_ruby &&\
+    rm -rf 2.4.0 2.5.0 &&\
+    ln -s 2.3.0 2.4.0 &&\
+    ln -s 2.3.0 2.5.0
+RUN cd /tmp/gentoo/usr/lib64/ruby/gems &&\
+    ln -s 2.3.0 2.4.0 &&\
+    ln -s 2.3.0 2.5.0
+
+RUN cd /tmp/gentoo/usr/portage/dev-ruby/rdoc &&\
+    rm rdoc-6.0.4.ebuild &&\
+    wget https://gist.githubusercontent.com/awesomebytes/ec0d765fd1cd0dab7b80175aedc975bb/raw/a9f9cc152281180d7dc57fba95100a5ab0688aef/rdoc-6.0.4.ebuild &&\
+    $PREFIXED ebuild rdoc-6.0.4.ebuild manifest
+
+# Modify the gazebo-7.11.0 ebuild to not use app-text/ronn cause there is no way to emerge it
+# or actually add it to package.provided
+# as it will just say:
+# ronn not found, manpages won't be generated
+RUN echo "app-text/ronn-0.7.3-r3" >> /tmp/gentoo/etc/portage/profile/package.provided 
+
+# also got Missing: Ignition Transport (libignition-transport-dev or libignition-transport2-dev
+
+RUN mkdir -p /tmp/gentoo/etc/portage/patches/sci-electronics/gazebo-7.11.0 &&\
+    cd /tmp/gentoo/etc/portage/patches/sci-electronics/gazebo-7.11.0 &&\
+    wget https://gist.githubusercontent.com/awesomebytes/8d34f25516855fca38be0a8539ac10a0/raw/b02c0dfb283b0f450d440ddc1af8818e8b8875b8/0001-Fix-scoped_ptr-was-not-declared-in-this-scope.patch
+
 RUN $PREFIXED emerge =sci-electronics/gazebo-7.11.0
 
 RUN $PREFIXED emerge ros-kinetic/desktop_full
