--- a/ros_base/Dockerfile2
+++ b/ros_base/Dockerfile2
@@ -1,6 +1,10 @@
 # Just Ubuntu 16.04 with a user called user and some basic tools
 FROM awesomebytes/roogp_ros_kinetic_ros_base_setup
 
+# To be able to compile ros-kinetic/roscpp with boost 1.71.0
+# As reported here: https://github.com/ros/ros-overlay/issues/912
+COPY 0001-Remove-signals-to-enable-compilation-to-go-thru.patch $EPREFIX/etc/portage/patches/ros-kinetic/roscpp/0001-Remove-signals-to-enable-compilation-to-go-thru.patch
+
 # Setup the basic ROS
 RUN $PREFIXED emerge ros-kinetic/ros_base || true
 # Apparently dev-lisp/sbcl-1.4.13 sometimes may fail in some of the tests
