--- a/desktop/Dockerfile2
+++ b/desktop/Dockerfile2
@@ -1,6 +1,10 @@
 # Pull ros-kinetic/ros_base already emerged and the first part to emerge desktop
 FROM awesomebytes/roogp_ros_kinetic_desktop_1
 
+# Hack meanwhile this gets solved: https://github.com/ros/ros-overlay/issues/913
+RUN rm $EPREFIX/usr/local/portage/ros-kinetic/orocos_kdl/files/*
+RUN cd $EPREFIX/usr/local/portage/ros-kinetic/orocos_kdl; $PREFIXED ebuild *.ebuild manifest
+
 # Setup desktop (237 packages)
 RUN $PREFIXED emerge ros-kinetic/desktop || true
 
