--- a/ros_base/Dockerfile
+++ b/ros_base/Dockerfile
@@ -129,11 +129,10 @@ ros-lunar/* PYTHON_SINGLE_TARGET: -* python2_7\n\
 RUN $PREFIXED emerge dev-util/cmake
 
 # Make sure rosdep & catkin emerge OK
-# Until https://github.com/ros/ros-overlay/pull/934 is merged we need a little patch
+# Higher versions of rospkg (out of ros-overlay) unsupport python2
+# ros-kinetic/nodelet_topic_tools is the first to fail if rospkg is not in py2
+RUN echo ">=dev-python/rospkg-1.8" >> $EPREFIX/etc/portage/package.mask
 RUN echo ">=dev-python/rosdep-0.13.0 -python_targets_python2_7" >> $EPREFIX/etc/portage/package.use
-RUN cd $EPREFIX/usr/local/portage/ros-kinetic/catkin &&\
-    rm files/0001-Workaround-error-issue-ros-overlay-711.patch &&\
-    $PREFIXED ebuild $EPREFIX/usr/local/portage/ros-kinetic/catkin/catkin-0.7.20-r1.ebuild manifest
 RUN $PREFIXED emerge dev-python/rosdep ros-kinetic/catkin
 
 RUN echo "sys-libs/libcap -pam" >> $EPREFIX/etc/portage/package.use
